[package]
name = "f401nucleo_robo_rust"
version = "0.1.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[dependencies]
# These are fundamental cortex-m support crates
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
embedded-hal = "0.2"
ssd1306 = "0.4"
embedded-graphics = "0.6"
ws2812-spi = "0.3.0"
smart-leds = "0.3.0"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"]

#[dependencies.stm32f4]
#version = "0.10.0"
# Edit this feature to change which STM32F4 device you are using
#features = ["stm32f401", "rt"]

[profile.release]
# Many of these settings are highly recommended or required for embedded work
codegen-units = 1
incremental = false
debug = true
lto = true

[patch.crates-io]
smart-leds-trait = { path = "/Users/nis/Develop/smart-leds-trait" }
